описана форма для проверки возраста
